...
                  _pop();
                }
              },
            ),
            ListTile(
              leading: const Icon(Icons.share_outlined, color: Colors.white),
              title: const Text('Share', style: TextStyle(color: Colors.white)),
              onTap: () async {
                Navigator.pop(context);
                if (asset.type == AssetType.video) {
                  final uri = await asset.getMediaUrl();
                  if (uri != null) {
                    await Share.shareXFiles([XFile(uri)]);
...
